# novelcast

./: .env  .gitignore  .prettierrc  Makefile  README.md  bs-config.js  package.json  pyproject.toml
data/: novelcast.db
src/novelcast/: main.py  run.py  settings.py
src/novelcast/api/: deps.py  errors.py  middleware.py  routes.py
src/novelcast/api/routes/: admin.py  api.py  download.py  files.py  pages.py  stories.py  subscriptions.py  sync.py  users.py
src/novelcast/api/ws/: notifications.py
src/novelcast/app/: factory.py  lifespan.py  state.py
src/novelcast/auth/: dependencies.py  routes.py  session.py
src/novelcast/core/: __init__  auth.py  config.py  context.py  logging.py  permissions.py  render.py  ui_context.py
src/novelcast/db/: database.py  query_manager.py  schema.sql
src/novelcast/db/queries/: chapters.sql  files.sql  permissions.sql  progress.sql  settings.sql  stories.sql  users.sql
src/novelcast/db/repositories/: auth_repository.py  (+7 more)
src/novelcast/engine/: base.py  download_engine.py  engine_selector.py  fanficfare_engine.py  site_detector.py  updater.py
src/novelcast/parser/: base.py  epub_parser.py  fanficfare_parser.py  html_parser.py  pdf_parser.py  registry.py  story_parser.py
src/novelcast/pipeline/: file_writer.py  story_pipeline.py
src/novelcast/services/: auth_service.py  chapters_service.py  file_service.py  page_service.py  progress_service.py  settings_service.py  story_download_service.py  story_service.py  subscription_service.py  user_service.py
src/novelcast/storage/: db.py
src/novelcast/utils/: files.py
(+47 files in other folders)
