[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "novelcast"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.14"

dependencies = [
    "fastapi>=0.110,<0.120",
    "starlette<1.0.0",
    "uvicorn[standard]",
    "jinja2",
    "python-multipart",
    "pydantic",
    "schedule",
    "fanficfare",
    "requests",
    "beautifulsoup4",
    "pydantic-settings>=2.13.1",
    "itsdangerous>=2.2.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
novelcast = "novelcast.run:main"


